# musicbirb

./: .gitignore  .justfile  Cargo.toml  README.md  buildServer.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-ios.sh  setup-ios.sh
.cargo/: config.toml
app/: App.tsx  app.json  package.json  pnpm-lock.yaml  tsconfig.json
app-ffi/: package.json  pnpm-lock.yaml  ubrn.config.yaml
app/app/: _layout.tsx  player.tsx
app/app/(tabs)/: _layout.tsx  downloads.tsx  index.tsx  library.tsx  search.tsx
app/app/(tabs)/(home,library)/: _layout.tsx  index.tsx
app/app/(tabs)/(home,library)/albums/: [id].tsx
app/app/(tabs)/(home,library)/artists/: [id].tsx
app/app/(tabs)/(home,library)/playlists/: [id].tsx
app/src/api/: index.ts
app/src/components/: CurrentlyPlayingBar.tsx  PaginatedList.tsx  PlayerControls.tsx  ProgressBar.tsx  QueueList.tsx
app/src/components/entities/: AlbumGridItem.tsx  AlbumItem.tsx  AlbumListItem.tsx  PlaceholderAlbumItem.tsx  PlaylistItem.tsx  TrackItem.tsx
app/src/components/layout/: PaginatedList.tsx
app/src/components/playback/: CurrentlyPlayingBar.tsx  PlayerControls.tsx  ProgressBar.tsx  QueueList.tsx
app/src/components/ui/: GridItem.tsx  InteractivePressable.tsx  ListItem.tsx
app/src/context/: MusicbirbContext.tsx
app/src/screens/: LoginScreen.tsx  PlayerScreen.tsx  SetupScreen.tsx
app/src/utils/: subsonic.ts  time.ts
crates/core/: Cargo.toml
crates/core/src/: actor.rs  api.rs  art_cache.rs  auth.rs  core.rs  error.rs  ffi.rs  lib.rs  models.rs  mpris.rs  player.rs  scrobble.rs  settings.rs  state.rs  utils.rs
crates/core/src/api/: subsonic.rs
crates/core/src/backend/: mod.rs  mpv.rs  rodio.rs
crates/core/src/providers/: mod.rs
crates/core/src/providers/jellyfin/: activity.rs  album.rs  artist.rs  dto.rs  media.rs  mod.rs  models.rs  playlist.rs  search.rs  track.rs
crates/core/src/providers/subsonic/: activity.rs  album.rs  artist.rs  dto.rs  media.rs  mod.rs  models.rs  navidrome_dto.rs  playlist.rs  search.rs  track.rs
crates/ffi/: Cargo.toml
crates/ffi/.cargo/: config.toml
crates/ffi/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/moka-query/: Cargo.toml
crates/moka-query-macros/: Cargo.toml
crates/moka-query-macros/src/: lib.rs
crates/moka-query/examples/: basic.rs
crates/moka-query/src/: client.rs  lib.rs  state.rs
crates/moka-query/tests/: feature_test.rs  integration_test.rs  retry_test.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
crates/ui/src/components/: login.rs  mod.rs  now_playing.rs  progress.rs  queue.rs
ios/: project.yml
ios/Musicbirb/: AppEnvironment.swift  Config.swift  Info.plist  Localizable.xcstrings  MusicbirbApp.swift  info.plist
ios/Musicbirb.xcodeproj/: project.pbxproj
ios/Musicbirb.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Musicbirb.xcodeproj/xcshareddata/xcschemes/: Musicbirb.xcscheme
ios/Musicbirb/App/: AppEnvironment.swift  AppRouter.swift  MusicbirbApp.swift
ios/Musicbirb/Assets.xcassets/jellyfin.imageset/: Contents.json
ios/Musicbirb/Audio/: NativeAudioDelegate.swift
ios/Musicbirb/Core/: MokaQuery.swift
ios/Musicbirb/Core/Audio/: RemoteCommandManager.swift
ios/Musicbirb/Core/Rust/: Config.swift  CoreManager.swift  ModelExtensions.swift
ios/Musicbirb/Core/Services/: ArtworkColorLoader.swift
ios/Musicbirb/Features/Auth/: AuthViewModel.swift  LoginView.swift
ios/Musicbirb/Features/Home/: HomeView.swift
ios/Musicbirb/Features/Playback/: CurrentlyPlayingBar.swift  PlaybackViewModel.swift  PlayerSheet.swift  QueueSheet.swift
ios/Musicbirb/Features/Search/: SearchView.swift
ios/Musicbirb/Features/Settings/: DataUsageSettingsView.swift  PlaybackSettingsView.swift  SettingsView.swift  SettingsViewModel.swift
ios/Musicbirb/Resources/: Localizable.xcstrings
ios/Musicbirb/Resources/AppIcon.icon/: icon.json
ios/Musicbirb/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Musicbirb/Resources/Assets.xcassets/lastfm.imageset/: Contents.json
ios/Musicbirb/UI/Components/: AlbumGridItem.swift  AlbumListItem.swift  ArtistGridItem.swift  ContextMenus.swift  HeroHeaderView.swift  ItemDetailsSheet.swift  PaginatedList.swift  PlaylistItem.swift  ShareItemSheet.swift  TrackItemRow.swift
ios/Musicbirb/UI/Main/: ContentView.swift
ios/Musicbirb/UI/Modifiers/: PlaylistActionEnvironment.swift  ScrollOffsetPreferenceKey.swift  View+Extensions.swift
ios/Musicbirb/Util/: KeychainHelper.swift
ios/Musicbirb/Utils/: ArtworkColorLoader.swift  GlobalPresentationModifier.swift  Log.swift  ModelExtensions.swift  Notifications.swift  SafeAreaInsetsKey.swift  SwiftQuery+Extensions.swift
ios/Musicbirb/View/: PlaylistView.swift  SearchView.swift
ios/Musicbirb/View/Common/: AlbumGridItem.swift  TrackItemRow.swift
ios/Musicbirb/View/Playlists/: PlaylistListView.swift
ios/Musicbirb/View/Settings/: AccountSettingsView.swift
ios/Musicbirb/ViewModel/: AuthViewModel.swift  CoreManager.swift  MusicbirbViewModel.swift  PlaybackViewModel.swift  SettingsViewModel.swift
ios/Musicbirb/Views/: AccountSwitcherView.swift  AlbumView.swift  ArtistSkeletonView.swift  ArtistView.swift  ContentView.swift  HomeView.swift  LibraryView.swift  LoginView.swift  PlaylistView.swift  SearchView.swift
ios/Musicbirb/Views/Components/: AlbumCarouselItem.swift  AlbumGridItem.swift  AlbumListItem.swift  ArtistGridItem.swift  HeroActionButton.swift  HeroHeaderSkeleton.swift  HeroHeaderView.swift  PaginatedList.swift  PlaylistItem.swift  ProgressHUD.swift  SmoothImage.swift  TrackItemRow.swift
ios/Musicbirb/Views/Player/: CurrentlyPlayingBar.swift  PlayerSheet.swift  QueueSheet.swift
ios/Musicbirb/Views/Playlists/: AddToPlaylistSheet.swift  CreateEditPlaylistSheet.swift  PlaylistListView.swift
ios/Musicbirb/Views/Settings/: AccountSettingsView.swift  DataUsageSettingsView.swift  DownloadsSettingsView.swift  GeneralSettingsView.swift  PlaybackSettingsView.swift  SettingsView.swift  TranscodingSettingsView.swift  UISettingsView.swift
(+1 files in other folders)
