[package]
name = "musicbirb"
version = "0.1.0"
edition = "2024"

[features]
default = ["subsonic", "jellyfin"]
ffi =["dep:uniffi", "dep:lazy_static"]
jellyfin = []
mpv =["dep:libmpv"]
os-media-controls = ["dep:souvlaki"]
subsonic = ["dep:submarine"]

[dependencies]
async-trait = "0.1"
directories = "5.0"
image = "0.25.9"
lazy_static = { version = "1.5.0", optional = true }
libmpv = { git = "https://github.com/ParadoxSpiral/libmpv-rs", optional = true }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
souvlaki = { version = "0.8.3", optional = true, default-features = false, features = ["use_zbus"] }
submarine = { version = "0.1.1", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uniffi = { version = "0.30.0", optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
