[package]
name = "musicbirb"
version = "0.1.0"
edition = "2024"

[features]
default = ["subsonic", "jellyfin"]
uniffi =["dep:uniffi", "dep:lazy_static", "moka-query/uniffi"]
jellyfin = []
mpv =["dep:libmpv"]
os-media-controls = ["dep:souvlaki"]
rodio = ["dep:rodio", "dep:stream-download"]
subsonic = ["dep:md5", "dep:chrono"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.44", features = ["serde"], optional = true }
directories = "5.0"
futures = "0.3"
image = "0.25.9"
lazy_static = { version = "1.5.0", optional = true }
libmpv = { git = "https://github.com/ParadoxSpiral/libmpv-rs", optional = true }
macros = { path = "../macros" }
md5 = { version = "0.8.0", optional = true }
moka-query = { path = "../moka-query" }
rand = "0.10.1"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
rodio = { version = "0.22.2", default-features = false, features = ["symphonia-all", "playback"], optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
souvlaki = { version = "0.8.3", optional = true, default-features = false, features = ["use_zbus"] }
stream-download = { version = "0.4.2", optional = true, default-features = false, features = ["reqwest", "reqwest-rustls", "temp-storage"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uniffi = { version = "0.30.0", optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
