[package]
name = "ffi"
version = "0.1.0"
edition = "2024"

[lib]
# staticlib is required for iOS, cdylib is required for Android
crate-type = ["cdylib", "staticlib"]

[dependencies]
musicbirb = { path = "../core" }
uniffi = { version = "0.30.0", features = ["tokio"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
async-trait = "0.1"
thiserror = "2.0.18"
lazy_static = "1.5.0"
