[package]
name = "ffi"
version = "0.1.0"
edition = "2024"

[lib]
name = "musicbirb"
crate-type = ["cdylib", "staticlib"]

[dependencies]
musicbirb = { path = "../core", features = ["ffi", "rodio"] }
uniffi = { version = "0.30.0", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
