[package]
name = "moka-query"
version = "0.1.0"
edition = "2024"
description = "Macro-driven, cross-platform state management & caching library for Rust"

[features]
default = []
uniffi = ["moka-query-macros/uniffi", "dep:uniffi"]

[dependencies]
moka-query-macros = { path = "../moka-query-macros" }
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.50.0", features = ["sync", "rt", "macros"] }
futures = "0.3"
async-stream = "0.3"
uniffi = { version = "0.30.0", optional = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2.0"
